Apply flexbox to sidebar and fix width issues
Applied flexbox to sidebar to organize logo and background attribution.

Set a min width on the sidebar because I did not want the text content
of the sidebar to wrap, mainly because the logo needs all text in one
line.

Realized that the content of the container was overflowing
horizontally and so set a min width on the .container

--- a/styleV2.css
+++ b/styleV2.css
@@ -12,3 +12,31 @@
 body, .container {
   min-height: 100vh;
 }
+
+.container {
+  display: flex;
+  background-color: var(--rapidcolor);
+  min-width: fit-content;
+}
+
+.container > * {
+}
+
+#sidebar {
+  background-image: url(./assets/yulia-khlebnikova-iuwMdNq0-s4-unsplash.jpg);
+	background-size: cover;
+	background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 100px;
+}
+
+#sidebar > * {
+  min-width: max-content
+}
+
+#logo {
+  display: flex;
+  align-items: center;
+}
